fixed a scroll overflow

--- a/src/Leaderboard.css
+++ b/src/Leaderboard.css
@@ -2,7 +2,7 @@
   list-style: none;
   padding-inline-start: 0px;
   border-bottom: 2px solid var(--theme-main-border);
-  overflow-x: scroll;
+  overflow-x: hidden;
 }
 
 .Run {
